# ESP-NOW-Autodiscovery-Component

./: .gitignore  ANSWER_TO_YOUR_QUESTION.md  FINAL_ANSWER.md  FIXES_APPLIED.md  GITHUB_ACTIONS_GUIDE.md  INTEGRATION_TESTING_GUIDE.md  MUTATION_TESTING_ANALYSIS.md  QUICK_START_TESTS.md  README.md  TEST.md  TEST_EFFECTIVENESS_DEMO.md  TEST_GUIDE.md  platformio.ini
.github/scripts/: sync_generator.py
.github/workflows/: build_test.yml  cpp-unit-tests.yml  sync_html.yml  test-and-coverage.yml  test-suite.yml
components/esp_mesh/: __init__.py  mesh.cpp  mesh.h  mesh_logic.h
docs/: COVERAGE_EXAMPLE.md  index.html
examples/: ci-gateway.yaml  ci-node.yaml
scripts/: setup_coverage.py
src/esphome/components/esp_mesh/: mesh.cpp
test/: test_mesh_logic.cpp  test_mesh_real_integration.cpp
test/mocks/: esp_mocks.h
tests/: CMakeLists.txt  TESTING_STRATEGY.md  conftest.py  requirements.txt  test_esp_mesh_entities.py  test_esp_mesh_networking.py  test_esp_mesh_node_specific.py  test_esp_mesh_peer_mgmt.py  test_esp_mesh_root_specific.py  test_esp_mesh_routing.py  test_esp_mesh_validation.py  test_node_core.py
tests/mocks/: esp_now_mock.h  esp_wifi_mock.h  esphome_mock.h  mock_esp_now.h  mock_wifi.h
tests/src/: test_esp_mesh_core.cpp  test_esp_mesh_networking.cpp  test_esp_mesh_peer_mgmt.cpp  test_esp_mesh_routing.cpp  test_esp_mesh_validation.cpp  test_mesh_real.cpp
